# OpenVolumeMesh

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md
CI/: ci-cppcheck.sh
documentation/subpages/: iterators_and_circulators.docu
examples/: CMakeLists.txt
examples/ovm2obj/: ovm2obj.cc
examples/topo_checks_examples/: Topo_checks_examples.cc  Topo_checks_examples.hh
examples/topo_checks_examples/Files/: Cuboid.ovm
examples/vtk_datafile_2/: read_vtk.cc
src/: CMakeLists.txt
src/OpenVolumeMesh/Attribs/: NormalAttribT_impl.hh  TetHeightAttrib.hh  TetVolumeAttrib.hh  TriangleAreaAttrib.hh
src/OpenVolumeMesh/Core/: AddSmartIterators.hh  BaseEntities.hh  CommonMeshDefinitions.hh  GeometryKernel.hh  Iterators.hh  ResourceManager.cc  ResourceManager.hh  ResourceManagerT_impl.hh  TopologicalFaceSet.cc  TopologicalFaceSet.hh  TopologicalLink.hh  TopologicalLinkT_impl.hh  TopologyChecks.cc  TopologyChecks.hh  TopologyKernel.cc  TopologyKernel.hh
src/OpenVolumeMesh/Core/Iterators/: BaseIterator.hh  EdgeIter.hh  VertexVertexIter.cc  VertexVertexIter.hh
src/OpenVolumeMesh/Core/Iterators/detail/: FaceEdgeIterImpl.cc  FaceEdgeIterImpl.hh  FaceHalfEdgeIterImpl.cc  FaceHalfEdgeIterImpl.hh
src/OpenVolumeMesh/Core/Properties/: PropertyPtr.hh  PropertyStorageBase.hh  PropertyStoragePtr.hh  PropertyStorageT.hh
src/OpenVolumeMesh/Core/detail/: TopologicalFaceSet.cc  TopologicalFaceSet.hh  TopologicalLink.hh  TopologicalLinkT_impl.hh  TopologyChecks.cc  Tracking.hh  exceptions.hh
src/OpenVolumeMesh/DifferentialOperators/: Divergence.hh  EdgeWeightEvaluators.hh  Gradient.hh  PolyhedralMeshLaplacians.hh
src/OpenVolumeMesh/FileManager/: FileManagerT_impl.hh  VtkColorReader.hh
src/OpenVolumeMesh/Generators/: Cube.hh  TetrahedralCuboid.cc  TetrahedralCuboid.hh
src/OpenVolumeMesh/Geometry/: Area.hh  Volume.hh
src/OpenVolumeMesh/IO/: IO.hh  PropertyCodecs.cc  PropertyCodecs.hh  PropertyCodecsEigen.hh  PropertyCodecsT_impl.hh  WriteOptions.hh  enums.cc  enums.hh  ovmb_read.hh
src/OpenVolumeMesh/Mesh/: HexahedralMeshTopologyKernel.hh  PolyhedralMesh.hh  PolyhedralMeshLaplacian.cc  PolyhedralMeshLaplacian.hh  PolyhedralMeshLaplacians.cc  PolyhedralMeshLaplacians.hh  TetrahedralMeshTopologyKernel.cc  TetrahedralMeshTopologyKernel.hh
src/OpenVolumeMesh/Topology/: TetTopology.cc  TetTopology.hh  TriangleTopology.cc  TriangleTopology.hh
src/OpenVolumeMesh/Unstable/: EigenViews.hh  SmartHandles.hh
src/Tools/: CMakeLists.txt
src/Tools/ovm2ply/: ovm2ply.cc
src/Tools/ovm2usd/: ovm2usd.cc
src/Unittests/: CMakeLists.txt  unittests_basics.cc  unittests_common.cc  unittests_common.hh  unittests_eigen.cc  unittests_geometry.cc  unittests_iterators.cc  unittests_laplacians.cc  unittests_local_topology.cc  unittests_smart_handles.cc  unittests_smart_tagger.cc  unittests_split_iterator.cc  unittests_swap_entities.cc  unittests_topology_checks.cc
src/Unittests/TestFiles/: 5.ovm  NonManifold_TwoTets.ovm  s04u_tetrahedron.vtk
